# Sigma16-exercise

./: .gitignore  HydraOverview.ps  README.md
Assessed_Exercise1/Kerkov-Velin/: StatusReport.txt  Testbench.hs  TrafficLight.hs
Assessed_Exercise2/: ALUrun.hs  Control.hs  Datapath.hs  M1.hs  StatusReport.txt  TestLOADXI.hs  TestMul.hs  sim2TestMul  simTestMul
Hydra/Hydra-0.9.2/: Hydra.cabal  LICENSE
Hydra/Hydra-0.9.2/src/HDL/Hydra/Circuits/: Combinational.lhs  Register.lhs
Hydra/Hydra-0.9.2/src/HDL/Hydra/Core/: Interact.hs  Pattern.hs  PrimData.hs  Testbench.hs
Hydra/Hydra-0.9.2/src/HDL/Hydra/Core/test-structure/: Circ1manualxform.hs  Circ1src.hs  Circ1struc.hs  howto.txt
Hydra/Hydra-0.9.2/src/HDL/Hydra/Examples/: #Tutorial1.hs#
Hydra/Hydra-0.9.3/: Hydra.cabal  README  makefile
Hydra/Hydra-0.9.3/src/HDL/Hydra/Core/: CombTools.hs  Group.hs  Lib.hs  RTL.hs  SigBool.hs  SigStream.hs  Signal.hs  Testbench.hs
Hydra/Hydra-0.9.3/src/HDL/Hydra/Core/test-structure/: Box.hs  Circ1main.hs  StrucCircuits.hs
Hydra/Hydra-0.9.3/src/HDL/Hydra/Core/test-structure/circ2/: MoreCircs.hs
Hydra/Hydra-0.9.3/src/HDL/Hydra/Core/test-structure/notes/: old-deleted.txt
Hydra/Hydra-0.9.3/src/HDL/Hydra/Examples/: Tutorial1.hs
Sigma16/: ALU.hs  ArrayMax.hs  Control.hs  ControlRun.hs  ControlSignals.hs  Datapath.hs  DatapathRun.hs  M1.hs  M1run.hs  Memory.hs  Multiply.hs  TestMul.hs  VILI_SOLUTION_simArrayMax.txt  newSimArrayMax  sim2TestMul  sim3TestMul  sim4TestMul  sim6TestMul  sim7TestMul  sim8TestMul  simArrayMax.txt  why.txt
